Link das Redes Sociais Adicionado.

--- a/index.html
+++ b/index.html
@@ -80,9 +80,8 @@
             <div class="footer-content">
                 <p>Feito e desenvolvido por <strong>Andrei Rodrigues</strong></p>
                 <p class="footer-links">
-                    <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    <a href="#" target="_blank"><i class="fas fa-envelope"></i></a>
+                    <a href="https://github.com/Andrei-RB" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="http://www.linkedin.com/in/andreirdebarros" target="_blank"><i class="fab fa-linkedin"></i></a>
                 </p>
             </div>
         </footer>
